# louden-swain-pipeline

./: .gitignore  REAMDME.md  pyproject.toml  validate_database.py
data/: .gitkeep  raw_data.xlsx  sample.csv  test.csv
logs/: .gitkeep  pipeline_state.json
louden_swain_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: .gitkeep  clean_results.csv  participant_id_df_results.csv
output_edge/: convert_to_csv_results.csv  manual_edits_results.csv  match_participants.csv  matches.csv  normalize_data_results.csv  wrestlers.csv
swainpipe/: cli.py  pipeline.py  schmea.sql
swainpipe/steps/: clean.py  convert_to_csv.py  create_database.py  create_name.py  create_participant_id.py  drop_cols.py  manual_edits.py  normalize_data.py  prep.py
